# reelms

./: .dockerignore  .gitignore  CHANGELOG.md  README.md  VERSION_NOTES.txt  package-lock.json  package.json  vercel.json
.github/workflows/: ci.yml  daily-export.yml  deploy-web.yml  release-desktop.yml
apps/desktop/: index.html  package.json  tsconfig.json  vite.config.ts
apps/desktop/electron/: main.cjs  preload.cjs  updater-preload.cjs  updater.html
apps/desktop/src/: App.tsx  config.ts  styles.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/web/: .env.example  .env.production  index.html  package.json  tsconfig.json  vite.config.ts
apps/web/public/: changelog.json  download.html  landing.html  version.json
apps/web/src/: MarketingLanding.jsx  electronAuth.js  firebase.js  i18n.js  index.css  localStorageClient.js  main.jsx  marketing.css  moderationClient.js  (+4 more)
docs/: BETA_DEPLOYMENT_READINESS.md  BETA_HARDENING_REPORT.md  GITHUB_PUSH_READY_CHECKLIST.md  SUPABASE_AND_REALTIME_READINESS.md
exports/: reelms-tracking.xlsx
infra/docker/: docker-compose.local.yml
infra/postgres/: 001_reelms_docs.sql
scripts/: configure-s3-cors.mjs  e2e-local-check.mjs  export-to-excel.mjs  package-lock.json  package.json  repair-community.mjs  repair-media.mjs
services/ai-bot/: .env.example  package.json
services/api/: .env.example  Dockerfile  package.json
services/bot/: .env.example  package.json
supabase/migrations/: 001_tracker.sql
(+130 files in other folders)
